# india-swing-trading-system

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_HANDOVER.md  Dockerfile  README.md  deploy.sh  pyproject.toml
.agents/: hooks.json
.agents/hooks/: deny-mutation.ps1  gate-antigravity-outbox.ps1
.agents/rules/: 00-orchestration.md
agent-control/: ORCHESTRATION.md  OUTBOX_SCHEMA.md
agent-control/dispatcher/: README.md  dispatcher.py  one_shot_runner.py  parallel_dispatcher.py  run.ps1  worker_status.py
docs/: ALPHA_ENGINE.md  BIAS_INVARIANTS.md  CALENDAR_DATA.md  CORPORATE_ACTIONS.md  COSTS_AND_EXECUTION.md  DAILY_PIPELINE.md  DAILY_REPORTS.md  DAILY_WORKFLOW.md  DETERMINISTIC_SWING_ENGINE.md  EVALUATION.md  EVIDENCE_RECONCILIATION.md  HISTORICAL_PRICES.md  IDENTITY_DECISIONS.md  IDENTITY_EVIDENCE.md  IDENTITY_REGISTRY.md  LIQUIDITY.md  MARKET_DATA.md  PAPER_OUTCOMES.md  PAPER_TRADES.md  PROJECT_HANDOVER.md  PROMOTION.md  PROPOSAL_PREPARATION.md  REFERENCE_DATA.md  SECURITY_INCIDENTS.md  SHADOW_ALERTS.md  SHADOW_SCANNER.md  SWING_DECISIONS.md  SWING_OPERATIONS.md  TICK_SIZES.md  TRADINGAGENTS_ADAPTER.md  UNIVERSE.md
infra/: README.md
src/india_swing/: __init__.py  _filesystem.py  audit.py  cloud_job.py  daily_workflow_job.py  demo.py  identity.py  operational_job.py  operational_restore.py  outcomes.py  paper_outcome_job.py  paper_outcome_restore.py  paper_portfolio_from_pipeline.py  paper_portfolio_job.py  paper_portfolio_prepare.py  paper_portfolio_restore.py  pipeline.py  proposal_prepare.py  state_restore_job.py
src/india_swing/calendar_data/: __init__.py  artifact_store.py  cli.py  codec.py  config.py  materialization.py  materialization_codec.py  materialization_store.py  models.py  parser.py
src/india_swing/calendar_evidence/: __init__.py  codec.py  models.py  policy.py  reconcile.py
src/india_swing/corporate_actions/: __init__.py  adjustments.py  models.py  promotion.py
src/india_swing/daily_pipeline/: __init__.py  acquisition.py  calendar_materialization_acquisition.py  cli.py  config.py  derived_evidence.py  derived_evidence_store.py  gcs_landing_job.py  landing_inputs.py  landing_job.py  landing_lineage.py  landing_manifest.py  landing_manifest_acquisition.py  models.py  pinned_gcs_run_file_boundary.py  pinned_gcs_run_service.py  pinned_gcs_run_spec.py  pinned_gcs_state_publication_service.py  pinned_gcs_state_restoration_service.py  pinned_gcs_state_restore_file_boundary.py  pinned_gcs_state_restore_spec.py  runner.py  state_blob_acquisition.py  state_hydration.py  state_inventory.py  state_publication.py  state_publication_acquisition.py  state_restoration.py  store.py
src/india_swing/daily_reports/: __init__.py  artifact_store.py  cli.py  codec.py  config.py  models.py  parser.py
src/india_swing/daily_workflow/: __init__.py  models.py  runner.py  service.py  store.py
tests/: test_acquisition.py  test_asof.py  test_audit.py  test_calendar_data_cli.py  test_calendar_data_config.py  test_calendar_data_import.py  test_calendar_evidence.py  test_calendar_materialization.py  test_calendar_materialization_acquisition.py  test_calendar_materialization_codec.py  test_calendar_materialization_store.py  test_cloud_job.py  test_collection_universe.py  test_corporate_action_adjustments.py  test_corporate_actions.py  test_daily_derived_evidence.py  test_daily_pipeline.py  test_daily_pipeline_cli_pinned_gcs.py  test_daily_reports_import.py  test_daily_workflow.py  test_delivery_costs.py  test_deterministic_baselines.py  test_deterministic_swing_signals.py  test_dispatcher.py  test_eligibility.py  test_evaluation_dataset_assembly.py  test_execution_simulator.py  test_execution_timing.py  test_gcs_landing_job.py  test_historical_backfill.py  test_historical_backfill_blockers.py  test_historical_backfill_evidence_worklist.py  test_historical_backfill_pilot.py  test_historical_price_store.py  test_historical_prices.py  test_historical_reconciliation.py  test_identity.py  test_identity_decisions.py  test_identity_evidence.py  test_identity_registry.py  (+78 more)
(+195 files in other folders)
