[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "india-swing"
version = "0.2.0"
description = "Bias-aware Indian equity swing-trade research and alert pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
kite = ["kiteconnect==5.2.0"]

[project.scripts]
india-swing-demo = "india_swing.demo:main"
india-swing-market-data = "india_swing.market_data.cli:main"
india-swing-reference-data = "india_swing.reference_data.cli:main"
india-swing-daily-reports = "india_swing.daily_reports.cli:main"
india-swing-evidence = "india_swing.reconciliation.cli:main"
india-swing-calendar-data = "india_swing.calendar_data.cli:main"
india-swing-history = "india_swing.historical_prices.cli:main"
india-swing-identity = "india_swing.identity_registry.cli:main"
india-swing-evaluation = "india_swing.evaluation.cli:main"
india-swing-daily-pipeline = "india_swing.daily_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
