[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "india-swing"
version = "0.2.0"
description = "Bias-aware Indian equity swing-trade research and alert pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["google-cloud-storage==3.13.0"]

[project.optional-dependencies]
kite = ["kiteconnect==5.2.0"]

[project.scripts]
india-swing-demo = "india_swing.demo:main"
india-swing-cloud-job = "india_swing.cloud_job:main"
india-swing-state-restore = "india_swing.state_restore_job:main"
india-swing-market-data = "india_swing.market_data.cli:main"
india-swing-reference-data = "india_swing.reference_data.cli:main"
india-swing-daily-reports = "india_swing.daily_reports.cli:main"
india-swing-evidence = "india_swing.reconciliation.cli:main"
india-swing-calendar-data = "india_swing.calendar_data.cli:main"
india-swing-history = "india_swing.historical_prices.cli:main"
india-swing-identity = "india_swing.identity_registry.cli:main"
india-swing-identity-evidence = "india_swing.identity_evidence.cli:main"
india-swing-identity-decisions = "india_swing.identity_decisions.cli:main"
india-swing-evaluation = "india_swing.evaluation.cli:main"
india-swing-daily-pipeline = "india_swing.daily_pipeline.cli:main"
india-swing-promotion = "india_swing.promotion.cli:main"
india-swing-tick-sizes = "india_swing.tick_sizes.cli:main"
india-swing-liquidity = "india_swing.liquidity.cli:main"
india-swing-universe = "india_swing.universe.cli:main"
india-swing-shadow-scan = "india_swing.shadow_scanner.cli:main"
india-swing-operational = "india_swing.operations.cli:main"
india-swing-operational-job = "india_swing.operational_job:main"
india-swing-operational-restore = "india_swing.operational_restore:main"
india-swing-paper-outcome-job = "india_swing.paper_outcome_job:main"
india-swing-paper-outcome-restore = "india_swing.paper_outcome_restore:main"
india-swing-paper-portfolio-job = "india_swing.paper_portfolio_job:main"
india-swing-paper-portfolio-from-pipeline = "india_swing.paper_portfolio_from_pipeline:main"
india-swing-paper-portfolio-prepare = "india_swing.paper_portfolio_prepare:main"
india-swing-paper-portfolio-restore = "india_swing.paper_portfolio_restore:main"
india-swing-daily-workflow-job = "india_swing.daily_workflow_job:main"

[tool.setuptools.packages.find]
where = ["src"]
